# linchemin_services

./: .gitignore  README.md  pyproject.toml  requirements.txt
services/: docker-compose.yml
services/rxnmapper/: dev.dockerfile  docker-compose.yml  requirements_pip.txt
services/rxnmapper/src/: application.py  main.py  schemas.py
src/linchemin_services/: __init__.py
src/linchemin_services/configuration/: config.py  defaults.py
src/linchemin_services/rxnmapper/: schemas.py  service.py
tests/: conftest.py  test_general.py  test_rxnmapper_service.py
tests/test_data/: reactions.json
