[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "linchemin_services"
version = "1.0.0"
description = "API-SDK to use reaction atom-to-atom mapping (RATAM) and computer-aided synthesis planning (CASP) tools"
license = { file = "LICENSE" }

authors = [{ name = "Marco Stenta", email = "marco.stenta@syngenta.com" }]

readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["reaction", "chemoinformatics", "computer-aided synthesis planning"]
requires-python = ">=3.9"
dependencies = [
    "pydantic",
    "dynaconf",
    "pyyaml"
]

[project.optional-dependencies]
dev = [
    "bumpver",
    "pytest-cov",
    "pytest",
    "sphinx"
]

[project.urls]
homepage = "https://linchemin.github.io"
repository = "https://github.com/syngenta/linchemin_services"

[project.scripts]
linchemin_services_configure = "linchemin_services.configuration.config:configure"

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']


